# Candles

./: LICENSE  README.md  ecosystem.config.js  miner  pyproject.toml  setup_miner.sh  validator
.github/workflows/: test.yml
candles/core/: data.py  mocks.py  neuron.py  synapse.py  utils.py
candles/core/scoring/: __init__.py  base.py  batch_scorer.py  prediction_scorer.py
candles/core/services/: candlestao_client.py
candles/core/storage/: base.py  json_storage.py
candles/miner/: base.py  miner.py  utils.py
candles/prices/: base.py  client.py  schemas.py
candles/validator/: base.py  sqlite_storage.py  storage.py  utils.py  validator.py
scripts/: ruff.sh
tests/core/scoring/: test_base.py  test_prediction_scorer.py  test_scorer.py
tests/miner/: test_miner.py  test_miner_utils.py
tests/prices/: test_client.py  test_schemas.py
tests/validator/: fixtures.py  test_incentive_scoring.py  test_storage.py  test_utils.py  test_validator.py
