[project]
name = "candles-subnet"
version = "0.1.0"
description = "Candles Subnet - Bittensor decentralized cryptocurrency prediction network"
readme = "README.md"
requires-python = ">=3.12"
# This is an application, not a library for PyPI distribution
# Use build-system for local development only
dependencies = [
    "bittensor>=9.6.1",
    "cachetools>=6.0.0",
    "ipdb>=0.13.13",
    "pandas>=2.3.0",
    "pydantic>=2.11.4",
    "pytest>=8.4.0",
    "ruff>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "aioresponses>=0.7.8",
]
test = [
    "aioresponses>=0.7.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candles"]
